Added unit tests for existing functionality